Fix profile picture oval shape on mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -97,7 +97,7 @@
     text-align: center;
   }
   .section__pic-container {
-    width: auto;
+    width: 46vw;
     height: 46vw;
     justify-content: center;
   }
